--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <div class="package-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="prism-bg" data-prism></div>
                     <div class="package-image">
-                        <img src="images/package-consultoria.png" alt="CRYPTOCULTURA Consultoría Especializada - Integración Crypto y Desarrollo Web B2B" class="package-ebook-img">
+                        <img src="package-consultoria.png" alt="CRYPTOCULTURA Consultoría Especializada - Integración Crypto y Desarrollo Web B2B" class="package-ebook-img">
                     </div>
                     
                     <div class="package-header">
