--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
                         <li><i class="fas fa-check"></i> Sesión 2: plan de 30 días + checklist personalizada.</li>
                         <li><i class="fas fa-check"></i> Soporte asincrónico: 2 mensajes/semana por 30 días.</li>
                         <li><i class="fas fa-check"></i> Ebook</li>
-                        <li><i class="fas fa-check"></i> Garantía: si no recibes 3 acciones que valgan 10× el precio, no pagas.</li>
-                    </ul>
+                        <li><i class="fas fa-check"></i> Garantía: wallet funcionando + primera compra exitosa + plan 30 días, o te devolvemos tu dinero.</li>
+
                     
                     <a href="https://buy.stripe.com/9B69AU2nZ2DX0483kbdfG01" target="_blank" class="btn btn-primary btn-block">
                         <i class="fas fa-calendar-check"></i>
