--- a/index.html
+++ b/index.html
@@ -268,16 +268,16 @@
                 <p class="section-subtitle">Mismo sistema. Distinto nivel de acompañamiento.</p>
             </div>
             
-            <!-- Black Friday Banner -->
+           <!-- Oferta de Lanzamiento Banner -->
             <div class="black-friday-banner" data-aos="zoom-in">
                 <div class="bf-icon">⚡</div>
                 <div class="bf-content">
                     <div class="focus-container" id="blackFridayText">
-                        <span class="focus-word">BLACK</span>
-                        <span class="focus-word">FRIDAY</span>
+                        <span class="focus-word">OFERTA</span>
+                        <span class="focus-word">LANZAMIENTO</span>
                     </div>
                     <div class="bf-discount">50% OFF</div>
-                    <div class="bf-date">Válido hasta el 30 de Noviembre 2025</div>
+                    <div class="bf-date">Válido todo Diciembre 2025</div>
                 </div>
                 <div class="bf-icon">⚡</div>
                 <div class="focus-frame">
